ported to 1.20.1 except Poofer because of Geckolib not being updated!!